// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footnote.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
^[inline]

=====================================output=====================================
^[inline]

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^alpha bravo]

=====================================output=====================================
[^alpha bravo]

================================================================================
`;
